# LeinadSokram

./: .gitignore  README.md
Week 11-17/Async log test/: CMakeLists.txt  main.c
Week 11-17/UART contol interface test/: CMakeLists.txt  main.c  oiasefchicoqwejoais.cpp
Week01-02/Day01/: pelda1.txt
Week01-02/Day02/02HumptyDumpty/: CMakeLists.txt
Week01-02/Day02/04IntroduceYourself/: CMakeLists.txt
Week01-02/Day02/05TwoNumbers/: CMakeLists.txt  main.cpp
Week01-02/Day02/06CodingHours/: main.cpp
Week01-02/Day02/08Swap/: main.cpp
Week01-02/Day02/09Bmi/: CMakeLists.txt  main.cpp
Week01/Day01/: file.txt  file2.txt  file3.txt  file4.txt  file5.txt
Week01/Day02/: CMakeLists.txt  main.cpp
Week04/: my-file.txt
Week05/Day04/01Apple/apple_test/: CMakeLists.txt  apple_test.cpp
Week05/Day04/03Anagram/anagram_test/: CMakeLists.txt  anagram_test.cpp
Week06/Parctice02/: main.cpp
Week06/Parctice2/: CMakeLists.txt
Week06/Practice01/: CMakeLists.txt  Car.cpp  Car.h  cars.txt  main.cpp
Week07/02HelloOthers/: CMakeLists.txt
Week07/03IntroduceYourself/: main.c
Week07/04TwoNumbers/: CMakeLists.txt  main.c
Week07/06GuessTheNumber/: CMakeLists.txt  main.c
Week07/07OldEnough/: CMakeLists.txt  main.c
Week07/08Equal/: CMakeLists.txt  main.c
Week07/09OddOrEven/: CMakeLists.txt
Week07/10SumOfDigits/: CMakeLists.txt
Week07/12Length/: main.c
Week09/Day02/: .cproject
Week09/Day03/: .cproject
Week09/Day04/: .cproject
Week11/Blink_counter_game/: .cproject
Week11/Number_counter/: CMakeLists.txt  main.c  number_counter.c  number_counter.h
(+384 files in other folders)
